--- a/Projects/blog.html
+++ b/Projects/blog.html
@@ -58,6 +58,86 @@
         </div>
        </div>
 
+       <div class="blog-container">
+
+        <!-- box1 -->
+        <div class="blog-box">
+            <!-- img  -->
+            <div class="blog-img">
+                <img src="./images/box1_image.jpg" >
+            </div>
+            <div class="blog-text">
+                <span>10 May 2023</span>
+                <h5>What Curling Irons Are The Best Ones</h5>
+                <a href="#" class="link">Read More</a>
+            </div>
+        </div>
+
+        <div class="blog-box">
+            <!-- img  -->
+            <div class="blog-img">
+                <img src="./images/blog-2.jpg" style="width:100%">
+            </div>
+            <div class="blog-text">
+                <span>16 May 2023</span>
+                <h5>What Curling Irons Are The Best Ones</h5>
+                <a href="#" class="link">Read More</a>
+            </div>
+        </div>
+
+        <div class="blog-box">
+            <!-- img  -->
+            <div class="blog-img">
+                <img src="./images/box3_image.jpg" >
+            </div>
+            <div class="blog-text">
+                <span>20 May 2023</span>
+                <h5>What Curling Irons Are The Best Ones</h5>
+                <a href="#" class="link">Read More</a>
+            </div>
+        </div>
+       </div>
+
+       <div class="blog-container">
+
+        <!-- box1 -->
+        <div class="blog-box">
+            <!-- img  -->
+            <div class="blog-img">
+                <img src="./images/box1_image.jpg" >
+            </div>
+            <div class="blog-text">
+                <span>10 May 2023</span>
+                <h5>What Curling Irons Are The Best Ones</h5>
+                <a href="#" class="link">Read More</a>
+            </div>
+        </div>
+
+        <div class="blog-box">
+            <!-- img  -->
+            <div class="blog-img">
+                <img src="./images/blog-2.jpg" style="width:100%">
+            </div>
+            <div class="blog-text">
+                <span>16 May 2023</span>
+                <h5>What Curling Irons Are The Best Ones</h5>
+                <a href="#" class="link">Read More</a>
+            </div>
+        </div>
+
+        <div class="blog-box">
+            <!-- img  -->
+            <div class="blog-img">
+                <img src="./images/box3_image.jpg" >
+            </div>
+            <div class="blog-text">
+                <span>20 May 2023</span>
+                <h5>What Curling Irons Are The Best Ones</h5>
+                <a href="#" class="link">Read More</a>
+            </div>
+        </div>
+       </div>
+
 
     </section>
 
